--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
   "target_username": "y2kson.",
-  "new_username": "<color=gray>FxzazxEgo<sup>[DONO]</sup></color>"
+  "new_username": "<color=red>FxzazxEgo<sup>[DONO]</sup></color>"
 }
